--- a/CapaPresentacion/App.config
+++ b/CapaPresentacion/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <connectionStrings>
+    <add name="cadena_conexion" connectionString="Data Source=NTKLORENZO\SQLEXPRESS;Initial Catalog=DBSISTEMA_VENTA;Integrated Security=True" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
